--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -17,3 +17,13 @@ html,body,#app{
   margin-top: 15px;
   margin-bottom: 15px;
 }
+.el-steps{
+  margin: 15px 0px;
+  
+}
+.el-step__title{
+  font-size: 13px;
+}
+.ql-editor{
+  min-height: 300px;
+}
